Refactoring and fix shifting from user menu

--- a/src/components/atoms/Button/Button.css
+++ b/src/components/atoms/Button/Button.css
@@ -20,6 +20,23 @@ button:disabled {
   cursor: not-allowed;
 }
 
+button.default {
+  background: transparent;
+  font-size: 22px;
+  height: 50px;
+  border: 1px solid #2c6cc3;
+  border-radius: 30px;
+  cursor: pointer;
+  width: 215px;
+  margin: 0 auto;
+  color: #2c6cc3;
+  opacity: .5;
+}
+
+button.default:hover {
+  opacity: 1;
+}
+
 .favicon {
   width: 50px;
   height: 50px;
