--- a/src/components/pages/Stylesheet/Stylesheet.css
+++ b/src/components/pages/Stylesheet/Stylesheet.css
@@ -26,6 +26,12 @@
   padding: 0 10px;
 }
 
+.form-group__add-button {
+  justify-content: center;
+  display: flex;
+  margin: 20px 0;
+}
+
 .form-group-table {
   display: flex;
   justify-content: center;
